--- a/src/main/resources/assets/sweetmagic/lang/en_us.json
+++ b/src/main/resources/assets/sweetmagic/lang/en_us.json
@@ -1866,7 +1866,7 @@
 	"tip.sweetmagic.mffurnace_bot": "Carry out the refined items to the chest-type block adjacent below.",
 	"tip.sweetmagic.magic_aether_force": "Cane Experience to be Acquired: %s",
 	"tip.sweetmagic.preparing": "Standby",
-	"tip.sweetmagic.needitem_0": "Have the following items",
+	"tip.sweetmagic.needitem_0": "Having follow items",
 	"tip.sweetmagic.needitem_1": "Right Click",
 	"tip.sweetmagic.queen_damecut": "Damage is not getting through. I need to attack with some other item ...",
 	"tip.sweetmagic.queen_break": "The mysterious power that protects Queen Frost is gone.",
@@ -2189,15 +2189,15 @@
 	"tip.sweetmagic.startlight_wand_key2": "pos reset",
 	"tip.sweetmagic.player_cook_level": "Cooking Level",
 	"tip.sweetmagic.cook_difficulty": "Cooking Difficulty",
-	"tip.sweetmagic.cook_level_tip1": "If the cooking level is higher than the cooking difficulty",
-	"tip.sweetmagic.cook_level_tip2": "Increased probability of quality level increase",
-	"tip.sweetmagic.cook_level_tip3": "Probability of increase is increased by specific block installation.",
-	"tip.sweetmagic.cook_level_tip4": "Granting bonus effects according to quality level",
+	"tip.sweetmagic.cook_level_tip1": "If cook level is high than cook difficulty",
+	"tip.sweetmagic.cook_level_tip2": "Increas probability of quality increase",
+	"tip.sweetmagic.cook_level_tip3": "Chance of quality increase is increased",
+	"tip.sweetmagic.cook_level_tip4": "Granting bonus effects according to quality",
 	"tip.sweetmagic.woodbed": "Can sleep at any time, but no respawn point is set",
 	"tip.sweetmagic.cardboard_storage": "Up to 6400 items of one type only can be stored.",
 	"tip.sweetmagic.dresser": "Holds up to 64 accessories per slot",
-	"tip.sweetmagic.summon_pedal_view1": "Obtained from the boss on a pedestal.",
-	"tip.sweetmagic.summon_pedal_view2": "Summon the boss by placing trophies.",
+	"tip.sweetmagic.summon_pedal_view1": "Obtained from boss on pedestal",
+	"tip.sweetmagic.summon_pedal_view2": "Summon boss by placed trophies",
 	"tip.sweetmagic.food_expblock": "5% increase in the quality of food in cooking blocks in 16 surrounding blocks per type of block (maximum 15%)",
 	"tip.sweetmagic.transfer_gate_vertical": "Teleportation is possible by inserting a Clerodendrum Petal with registered coordinates (up to 1).",
 	"tip.sweetmagic.mysterious_fork_chance": "10% increase in quality when creating food with quality",
