--- a/src/main/resources/assets/sweetmagic/lang/zh_cn.json
+++ b/src/main/resources/assets/sweetmagic/lang/zh_cn.json
@@ -576,19 +576,19 @@
 	"item.sweetmagic.berryorange_juice": "莓橙果汁",
 	"item.sweetmagic.milkshake": "奶昔",
 	"item.sweetmagic.summoner_wand": "召唤师之杖",
-	"item.sweetmagic.wizard_gauntlet": "魔術師のガントレット",
-	"item.sweetmagic.electric_earring": "電光のイアリング",
-	"item.sweetmagic.blize_robe": "ブリッツローブ",
-	"item.sweetmagic.magic_magia_frostlaser": "マギア・フロストレーザー",
-	"item.sweetmagic.magic_magia_holybuster": "マギア・ホーリーバスター",
-	"item.sweetmagic.magic_magia_ignisblast": "マギア・イグニスブラスト",
-	"item.sweetmagic.magic_magia_windstorm": "マギア・ウィンドストーム",
-	"item.sweetmagic.magic_magia_cherryrain": "マギア・チェリーブロッサム・レイン",
-	"item.sweetmagic.blitz_wizard_spawn_egg": "ブリッツ・ウィザードのスポーンエッグ",
-	"item.sweetmagic.blitz_wizard_master_spawn_egg": "ブリッツ・ウィザード・マスターのスポーンエッグ",
-	"item.sweetmagic.electricgolem_spawn_egg": "エレキゴーレムのスポーンエッグ",
-	"item.sweetmagic.redberyl_pick": "レッドベリル・ピッケル",
-	"item.sweetmagic.redberyl_shovel": "レッドベリル・シャベル",
+	"item.sweetmagic.wizard_gauntlet": "魔术师手套",
+	"item.sweetmagic.electric_earring": "电光耳环",
+	"item.sweetmagic.blize_robe": "闪雷法袍",
+	"item.sweetmagic.magic_magia_frostlaser": "魔力·冰霜激光",
+	"item.sweetmagic.magic_magia_holybuster": "魔力·圣光爆击",
+	"item.sweetmagic.magic_magia_ignisblast": "魔力·烈焰冲击",
+	"item.sweetmagic.magic_magia_windstorm": "魔力·狂风暴卷",
+	"item.sweetmagic.magic_magia_cherryrain": "魔力·樱花雨落",
+	"item.sweetmagic.blitz_wizard_spawn_egg": "闪雷魔法师的刷怪蛋",
+	"item.sweetmagic.blitz_wizard_master_spawn_egg": "闪雷魔导师的刷怪蛋",
+	"item.sweetmagic.electricgolem_spawn_egg": "电能魔像的刷怪蛋",
+	"item.sweetmagic.redberyl_pick": "红绿柱石镐",
+	"item.sweetmagic.redberyl_shovel": "红绿柱石铲",
 
 	"block.sweetmagic.antique_brick_0": "仿古砖",
 	"block.sweetmagic.antique_brick_1": "生苔仿古砖",
@@ -1558,33 +1558,33 @@
 	"block.sweetmagic.mirage_gate_glass": "幻影之门玻璃",
 	"block.sweetmagic.summon_pedal": "召唤台座",
 	"block.sweetmagic.transfer_gate_vertical": "传送门",
-	"block.sweetmagic.aether_crystal_light": "エーテルクリスタル・ライト",
-	"block.sweetmagic.divine_crystal_light": "ディバインクリスタル・ライト",
-	"block.sweetmagic.magia_crystal_light": "マギアクリスタル・ライト",
-	"block.sweetmagic.spawn_stone_m": "スポナークリスタル(マギア)",
-	"block.sweetmagic.counter_chair_b": "カウンターチェア(青)",
-	"block.sweetmagic.counter_chair_l": "カウンターチェア(黄緑)",
-	"block.sweetmagic.counter_chair_o": "カウンターチェア(オレンジ)",
-	"block.sweetmagic.counter_chair_pi": "カウンターチェア(紫)",
-	"block.sweetmagic.counter_chair_pu": "カウンターチェア(桃)",
-	"block.sweetmagic.counter_chair_r": "カウンターチェア(赤)",
-	"block.sweetmagic.counter_chair_s": "カウンターチェア(空)",
-	"block.sweetmagic.counter_chair_y": "カウンターチェア(黄)",
-	"block.sweetmagic.counter_chair_w": "カウンターチェア(白)",
-	"block.sweetmagic.mirage_wall_glass": "ミラージュウォールガラス",
-	"block.sweetmagic.figurine_blitz": "ブリッツ・ウィザードのトロフィー",
-	"block.sweetmagic.maple_leaves": "モミジの葉",
-	"block.sweetmagic.maple_sapling": "モミジの苗木",
-	"block.sweetmagic.mf_egg_launcher": "MFエッグランチャー",
-	"block.sweetmagic.half_timber_w_b": "白の木枠付きブロック(青)",
-	"block.sweetmagic.half_timber_w_l": "白の木枠付きブロック(黄緑)",
-	"block.sweetmagic.half_timber_w_o": "白の木枠付きブロック(オレンジ)",
-	"block.sweetmagic.half_timber_w_pi": "白の木枠付きブロック(桃)",
-	"block.sweetmagic.half_timber_w_pu": "白の木枠付きブロック(紫)",
-	"block.sweetmagic.half_timber_w_r": "白の木枠付きブロック(赤)",
-	"block.sweetmagic.half_timber_w_s": "白の木枠付きブロック(空)",
-	"block.sweetmagic.half_timber_w_y": "白の木枠付きブロック(黄)",
-	"block.sweetmagic.magia_table": "マギア・テーブル",
+  "block.sweetmagic.aether_crystal_light": "以太水晶灯",
+  "block.sweetmagic.divine_crystal_light": "神圣水晶灯",
+  "block.sweetmagic.magia_crystal_light": "魔力水晶灯",
+  "block.sweetmagic.spawn_stone_m": "魔力晶石召唤器",
+  "block.sweetmagic.counter_chair_b": "吧台椅（蓝）",
+  "block.sweetmagic.counter_chair_l": "吧台椅（黄绿）",
+  "block.sweetmagic.counter_chair_o": "吧台椅（橙）",
+  "block.sweetmagic.counter_chair_pi": "吧台椅（粉）",
+  "block.sweetmagic.counter_chair_pu": "吧台椅（紫）",
+  "block.sweetmagic.counter_chair_r": "吧台椅（红）",
+  "block.sweetmagic.counter_chair_s": "吧台椅（淡蓝）",
+  "block.sweetmagic.counter_chair_y": "吧台椅（黄）",
+  "block.sweetmagic.counter_chair_w": "吧台椅（白）",
+  "block.sweetmagic.mirage_wall_glass": "幻影墙玻璃",
+  "block.sweetmagic.figurine_blitz": "闪雷魔法师的雕像",
+  "block.sweetmagic.maple_leaves": "枫叶",
+  "block.sweetmagic.maple_sapling": "枫树苗",
+  "block.sweetmagic.mf_egg_launcher": "魔力产蛋机",
+  "block.sweetmagic.half_timber_w_b": "白木框方块（蓝）",
+  "block.sweetmagic.half_timber_w_l": "白木框方块（黄绿）",
+  "block.sweetmagic.half_timber_w_o": "白木框方块（橙）",
+  "block.sweetmagic.half_timber_w_pi": "白木框方块（粉）",
+  "block.sweetmagic.half_timber_w_pu": "白木框方块（紫）",
+  "block.sweetmagic.half_timber_w_r": "白木框方块（红）",
+  "block.sweetmagic.half_timber_w_s": "白木框方块（淡蓝）",
+  "block.sweetmagic.half_timber_w_y": "白木框方块（黄）",
+  "block.sweetmagic.magia_table": "魔力工作台",
 
 	"itemGroup.sweetmagic_tab": "甜蜜魔法✦建筑",
 	"itemGroup.sweetmagic_magic_tab": "甜蜜魔法✦魔法",
@@ -2206,41 +2206,41 @@
 	"tip.sweetmagic.summoner_wand_left": "左键：切换玩家附近召唤生物的待命模式",
 	"tip.sweetmagic.summoner_wand_false": "待命模式",
 	"tip.sweetmagic.summoner_wand_true": "战斗模式",
-	"tip.sweetmagic.magic_infinitwand_buff": "発動時にプレイヤーに一度だけバフを除去する効果を無効にするバフを付与",
-	"tip.sweetmagic.magic_magia_frostlaser": "攻撃対象に氷デバフを付与、氷デバフがある場合はダメージが1.5倍に増加",
-	"tip.sweetmagic.magic_magia_frostlaser_buff": "発動時にプレイヤーにダメージ減少のバフを付与",
-	"tip.sweetmagic.magic_magia_holybuster": "攻撃対象に発光バフを付与、発光バフがある場合は固定ダメージを与える",
-	"tip.sweetmagic.magic_magia_holybuster_buff": "発動時にプレイヤーに魔法の攻撃範囲が増加するバフを付与",
-	"tip.sweetmagic.magic_magia_ignisblast": "攻撃対象に燃焼デバフを付与、燃焼デバフがある場合は追加ダメージが発生",
-	"tip.sweetmagic.magic_magia_ignisblast_buff": "発動時にプレイヤーに魔法のダメージが増加するバフを付与",
-	"tip.sweetmagic.magic_magia_windstorm": "攻撃対象に出血デバフを付与、出血デバフがある場合はデバフレベルが1増加",
-	"tip.sweetmagic.magic_magia_windstorm_buff": "発動時にプレイヤーにダメージを肩代わりするバフを付与",
-	"tip.sweetmagic.magic_magia_cherryrain": "攻撃対象がバフを保持している場合はランダムにバフを解除",
-	"tip.sweetmagic.magic_magia_cherryrain_buff": "発動時にプレイヤーに追加攻撃の発生回数が1増加するバフを付与",
-	"tip.sweetmagic.wizard_gauntlet": "範囲攻撃を行う魔法のダメージ12.5%増加",
-	"tip.sweetmagic.wizard_gauntlet_ele": "雷属性魔法の場合、範囲攻撃の範囲が25%増加し、追加ダメージが2回発生",
-	"tip.sweetmagic.electric_earring": "周囲7.5ブロックにいる敵モブの動きを3秒間停止させる",
-	"tip.sweetmagic.magic_square": "魔法陣内にいる場合以下の効果を適用",
-	"tip.sweetmagic.magic_square_buff": "魔法陣内に入った場合一度だけ以下の効果を%s秒間付与",
-	"tip.sweetmagic.magic_rainfield_enemy": "敵モブに対して魔法被ダメージが%s増加するバフを付与",
-	"tip.sweetmagic.magic_gravityfield_finish": "魔法陣消滅時に敵モブに対して%sデバフを付与しダメージを与える",
-	"tip.sweetmagic.magic_windfield_finish": "魔法陣消滅時に敵モブに対して%sデバフを付与しダメージを与える",
-	"tip.sweetmagic.magic_rainfield_finish": "魔法陣消滅時にプレイヤーに対して魔法の%s%%のリキャストを回復",
-	"tip.sweetmagic.magic_future_visionfiled_finish": "魔法陣消滅時に敵モブに対して%s秒間動きを停止させる",
-	"tip.sweetmagic.magic_reflashfield_enemy": "モブに対して死亡しても一度だけ蘇生するバフを付与",
-	"tip.sweetmagic.magic_reflashfield_finish": "魔法陣消滅時に体力100%回復し、デバフを無効にするバフを付与",
-	"tip.sweetmagic.order": "優先度:",
-	"tip.sweetmagic.aether_lamplight": "ランプライトを中心に、周囲最大64ブロックにあるMF保持できるブロックにMFを送信（デフォルト:12ブロック）",
-	"tip.sweetmagic.mf_egg_launcher": "ゆっくりな間隔で卵を生産",
-	"tip.sweetmagic.progress": "進捗: %s%%",
-	"tip.sweetmagic.quality4": "(1)の効果が50%に変更",
-	"tip.sweetmagic.damage_armor": "ダメージアーマー",
-	"tip.sweetmagic.noempty_block": "周囲%sブロックにブロックがあるため召喚できません。ブロックを破壊してください",
-	"tip.sweetmagic.summon_pedal": "ボスから入手したとトロフィーを設置することでボスと再戦可能",
-	"tip.sweetmagic.request_item": "要求アイテム",
-	"tip.sweetmagic.magia_table": "指定されたいアイテムとMFを消費して魔法を複製",
-	"tip.sweetmagic.redberyl_pick": "採掘した表面から3×3×3の範囲を適正ブロック以外も採掘する。スニークで通常の採掘。",
-	"tip.sweetmagic.redberyl_shovel": "採掘した表面から3×3×3の範囲を適正ブロック以外も採掘する。スニークで通常の採掘。",
+ "tip.sweetmagic.magic_infinitwand_buff": "施放时给予玩家一个可抵消一次解除增益的效果",
+  "tip.sweetmagic.magic_magia_frostlaser": "对目标附加冰冻状态，若已冰冻则造成1.5倍伤害",
+  "tip.sweetmagic.magic_magia_frostlaser_buff": "施放时给予玩家减伤效果",
+  "tip.sweetmagic.magic_magia_holybuster": "给予目标发光状态，若已发光则造成固定伤害",
+  "tip.sweetmagic.magic_magia_holybuster_buff": "施放时提升玩家的魔法攻击范围",
+  "tip.sweetmagic.magic_magia_ignisblast": "给予目标燃烧状态，若已燃烧则造成额外伤害",
+  "tip.sweetmagic.magic_magia_ignisblast_buff": "施放时提升玩家的魔法伤害",
+  "tip.sweetmagic.magic_magia_windstorm": "给予目标出血状态，若已出血则状态等级+1",
+  "tip.sweetmagic.magic_magia_windstorm_buff": "施放时为玩家附加分摊伤害的效果",
+  "tip.sweetmagic.magic_magia_cherryrain": "若目标带有增益，则随机解除一项",
+  "tip.sweetmagic.magic_magia_cherryrain_buff": "施放时玩家获得一次额外攻击机会",
+  "tip.sweetmagic.wizard_gauntlet": "范围魔法伤害提高12.5%",
+  "tip.sweetmagic.wizard_gauntlet_ele": "若为雷系魔法，范围增加25%，并附加两次额外伤害",
+  "tip.sweetmagic.electric_earring": "使7.5格内敌人静止3秒",
+  "tip.sweetmagic.magic_square": "在魔法阵内时，将获得以下效果",
+  "tip.sweetmagic.magic_square_buff": "进入魔法阵时，可获得%s秒的特殊效果，仅限一次",
+  "tip.sweetmagic.magic_rainfield_enemy": "给予敌人魔法承伤增加%s的状态",
+  "tip.sweetmagic.magic_gravityfield_finish": "魔法阵结束时给予敌人%s减益并造成伤害",
+  "tip.sweetmagic.magic_windfield_finish": "魔法阵结束时给予敌人%s减益并造成伤害",
+  "tip.sweetmagic.magic_rainfield_finish": "魔法阵结束时为玩家恢复魔法%s%%的冷却",
+  "tip.sweetmagic.magic_future_visionfiled_finish": "魔法阵结束时使敌人定身%s秒",
+  "tip.sweetmagic.magic_reflashfield_enemy": "给予生物一次复活机会的状态",
+  "tip.sweetmagic.magic_reflashfield_finish": "魔法阵结束时恢复满血并获得免疫减益的效果",
+  "tip.sweetmagic.order": "优先级：",
+  "tip.sweetmagic.aether_lamplight": "以灯为中心，最多向64格内的MF储存块传输MF（默认12格）",
+  "tip.sweetmagic.mf_egg_launcher": "间隔时间内缓慢生成鸡蛋",
+  "tip.sweetmagic.progress": "进度：%s%%",
+  "tip.sweetmagic.quality4": "（1）效果降低为50%",
+  "tip.sweetmagic.damage_armor": "伤害护甲",
+  "tip.sweetmagic.noempty_block": "无法召唤：%s格范围内有方块，请清理",
+  "tip.sweetmagic.summon_pedal": "放置Boss掉落的奖杯后可再次召唤Boss",
+  "tip.sweetmagic.request_item": "所需物品",
+  "tip.sweetmagic.magia_table": "消耗指定物品与MF来复制魔法",
+  "tip.sweetmagic.redberyl_pick": "一次性采掘3×3×3范围的方块（包含非工具对应块），潜行可正常采掘",
+  "tip.sweetmagic.redberyl_shovel": "一次性采掘3×3×3范围的方块（包含非工具对应块），潜行可正常采掘",
 
 	"biome.sweetmagic.prism_forest": "棱镜森林",
 	"biome.sweetmagic.fruit_forest": "水果森林",
@@ -2252,7 +2252,7 @@
 	"biome.sweetmagic.magiawood_forest": "魔法森林",
 	"biome.sweetmagic.fruittower_forest": "高耸水果森林",
 	"biome.sweetmagic.frozen_forest": "冰封森林",
-	"biome.sweetmagic.maple_forest": "もみじの森",
+	"biome.sweetmagic.maple_forest": "枫树森林",
 
 	"structure.sweetmagic.select_dungen": "未选择搜索目标",
 	"structure.sweetmagic.tomb": "墓地",
@@ -2275,7 +2275,7 @@
 	"structure.sweetmagic.broken_ruins_site_wind": "腐朽的祭坛遗迹（风）",
 	"structure.sweetmagic.castle": "魔女之城",
 	"structure.sweetmagic.town_tower": "北方街塔",
-	"structure.sweetmagic.wizard_house": "ウィザードハウス",
+	"structure.sweetmagic.wizard_house": "魔法师之家",
 
 	"entity.sweetmagic.skullfrost": "冰霜骷髅",
 	"entity.sweetmagic.blazetempest": "风暴烈焰人",
@@ -2296,8 +2296,8 @@
 	"entity.sweetmagic.cherry_plant": "樱花树苗",
 	"entity.sweetmagic.pixevex": "古代恼鬼",
 	"entity.sweetmagic.phantomwolf": "幻影·狼",
-	"entity.sweetmagic.electricgolem": "エレキ・ゴーレム",
-	"entity.sweetmagic.blitz_wizard": "ブリッツ・ウィザード",
+	"entity.sweetmagic.electricgolem": "电能魔像",
+	"entity.sweetmagic.blitz_wizard": "闪雷魔法师",
 	"entity.sweetmagic.queenfrost": "冰之精灵⚝冰霜女皇",
 	"entity.sweetmagic.holyangel": "光之使徒⚝圣光天使",
 	"entity.sweetmagic.ignisknight": "炎之兽人⚝火焰骑士",
@@ -2305,9 +2305,9 @@
 	"entity.sweetmagic.bullfight": "烈火猛牛⚝斗牛",
 	"entity.sweetmagic.ancientfairy": "魅惑的妖精⚝阿妮西莉特",
 	"entity.sweetmagic.arlaune": "满开的巫女⚝阿罗妮",
-	"entity.sweetmagic.silver_landroad": "諂曲の狼 シルバーランドロード",
-	"entity.sweetmagic.white_butler": "屋敷の執事 ホワイトバトラー",
-	"entity.sweetmagic.blitz_wizard_master": "迅雷の魔術師 ブリッツ・ウィザード・マスター",
+"entity.sweetmagic.silver_landroad": "谄曲之狼⚝白银领主",
+"entity.sweetmagic.white_butler": "白银城执事",
+	"entity.sweetmagic.blitz_wizard_master": "迅雷的魔导师⚝闪雷布里茨",
 	"entity.sweetmagic.twilight_hora": "追忆的逢魔时 召唤者⚝赫拉",
 	"entity.sweetmagic.brave_skeleton": "追忆的骑士 骷髅勇士",
 	"entity.sweetmagic.elsharia_curious": "追忆的使徒 好奇天使⚝艾莎莉亚",
@@ -2358,34 +2358,34 @@
 	"effect.sweetmagic.dig_poison_vulnerable": "地、毒脆弱化",
 	"effect.sweetmagic.recast_reduction": "冷却时间减少",
 	"effect.sweetmagic.magic_array": "召唤保护",
-	"effect.sweetmagic.queen_bless": "女王の加護",
-	"effect.sweetmagic.holy_bless": "使徒の加護",
-	"effect.sweetmagic.knight_bless": "騎士の加護",
-	"effect.sweetmagic.witch_bless": "魔女の加護",
-	"effect.sweetmagic.arlaune_bless": "巫女の加護",
-	"effect.sweetmagic.sandryon_bless": "創成の加護",
-	"smadbent.wizard_house.title": "空に浮かぶ魔術師の家",
-	"smadbent.wizard_house.text": "ウィザードハウスを見つける",
-	"smadbent.blitz_wizard.title": "魔女達の好敵手",
-	"smadbent.blitz_wizard.text": "ブリッツ・ウィザードを倒す",
-	"smadbent.sm_village.title": "あつまれ スイートマジックの村",
-	"smadbent.sm_village.text": "スイートマジックの村を見つける",
-	"smadbent.magia_table.title": "魔法の複製",
-	"smadbent.magia_table.text": "マギア・テーブルの作成",
-	"smadbent.enchant_educe.title": "MFを使ったエンチャント",
-	"smadbent.enchant_educe.text": "エンチャント・エデュースの作成",
-	"smadbent.magia_rewrite.title": "エンチャントレベルの強化",
-	"smadbent.magia_rewrite.text": "マギア・リライトの作成",
-	"smadbent.cosmic_magia_wand.title": "真の宇宙の力の杖",
-	"smadbent.cosmic_magia_wand.text": "コズミッククリスタルワンドを強化",
-	"smadbent.mf_fisher.title": "MFで魚釣り",
-	"smadbent.mf_fisher.text": "MFフィッシャーを作成",
-	"smadbent.mf_forer.title": "MFで肉を生産",
-	"smadbent.mf_forer.text": "MFフォーアラーを作成",
-	"smadbent.mf_squeezer.title": "MFで牛乳を生産",
-	"smadbent.mf_squeezer.text": "MFスクイザーを作成",
-	"smadbent.mf_egg_launcher.title": "MFで卵を生産",
-	"smadbent.mf_egg_launcher.text": "MFエッグランチャーを作成",
+  "effect.sweetmagic.queen_bless": "女王的祝福",
+  "effect.sweetmagic.holy_bless": "使徒的祝福",
+  "effect.sweetmagic.knight_bless": "骑士的祝福",
+  "effect.sweetmagic.witch_bless": "魔女的祝福",
+  "effect.sweetmagic.arlaune_bless": "巫女的祝福",
+  "effect.sweetmagic.sandryon_bless": "创世的祝福",
+  "smadbent.wizard_house.title": "浮在空中的魔法师之家",
+  "smadbent.wizard_house.text": "找到魔法师之家",
+  "smadbent.blitz_wizard.title": "魔女们的劲敌",
+  "smadbent.blitz_wizard.text": "击败闪雷魔法师",
+  "smadbent.sm_village.title": "集结吧，甜密魔法之村！",
+  "smadbent.sm_village.text": "找到甜密魔法村庄",
+  "smadbent.magia_table.title": "魔法复制",
+  "smadbent.magia_table.text": "制作魔力工作台",
+  "smadbent.enchant_educe.title": "利用MF进行附魔",
+  "smadbent.enchant_educe.text": "制作附魔导引台",
+  "smadbent.magia_rewrite.title": "强化附魔等级",
+  "smadbent.magia_rewrite.text": "制作魔力重构台",
+  "smadbent.cosmic_magia_wand.title": "真正的宇宙之杖",
+  "smadbent.cosmic_magia_wand.text": "强化宇宙水晶魔杖",
+  "smadbent.mf_fisher.title": "魔力钓鱼",
+  "smadbent.mf_fisher.text": "制作魔力钓鱼台",
+  "smadbent.mf_forer.title": "魔力牧场",
+  "smadbent.mf_forer.text": "制作魔力屠宰机",
+  "smadbent.mf_squeezer.title": "魔力产奶",
+  "smadbent.mf_squeezer.text": "制作魔力挤奶机",
+  "smadbent.mf_egg_launcher.title": "魔力产蛋",
+  "smadbent.mf_egg_launcher.text": "制作魔力产蛋机",
 
 	"smadbent.root.title": "甜蜜魔法",
 	"smadbent.root.text": "属于你的甜蜜魔法之旅",
